fix more mobile layout issue

--- a/style.css
+++ b/style.css
@@ -830,6 +830,7 @@ html {
     #aboutpagetitle {
         font-size: 300%;
         margin-top: -20px;
+        padding-top: 20px;
     }
 
     #aboutpagetextcontainer {
@@ -920,8 +921,8 @@ html {
 
     #workexperiencetitle {
         font-size: 300%;
-        margin-bottom: 10px;
         margin: 0;
+        margin-bottom: -10px;
     }
 
     #workexperiencecontainer {
